--- a/miniprogram/pages/homePage/package/statistics/statistics.wxml
+++ b/miniprogram/pages/homePage/package/statistics/statistics.wxml
@@ -61,12 +61,34 @@
         <text class="text-black text-sm">{{completed7}}</text>
       </view>
     </view>
-
   </view>
 
   <view class="cu-bar bg-white solid-bottom margin-top-sm">
     <view class="action">
       <text class="cuIcon-title text-blue"></text>接单数据
+    </view>
+    <view class="action">
+      <text class="text-grey text-sm">完成单数</text>
+    </view>
+  </view>
+  <view class="cu-list menu sm-border">
+    <view class="cu-item" wx:for="{{adminStatistics2}}" wx:key="index">
+      <view class="content">
+        <text class="text-balck text-sm" wx:if="{{!!item.nickName}}">{{index+1}}. {{item.nickName}}</text>
+        <text class="text-balck text-sm" wx:else>{{index+1}}. {{item.name}}</text>
+      </view>
+      <view class="action">
+        <text class="text-black text-sm">{{item.completedNum}}</text>
+      </view>
+    </view>
+    <view class="cu-load bg-white {{!isLoad?'loading':''}}"></view>
+    <view class="cu-load bg-white {{adminStatistics.length == 0 && !!isLoad?'over':''}}"></view>
+    <view class="cu-load over bg-white" wx:if="{{adminStatistics==null && isLoad}}"></view>
+  </view>
+
+  <view class="cu-bar bg-white solid-bottom margin-top-sm">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>历史接单
     </view>
     <view class="action">
       <text class="text-grey text-sm">完成单数</text>
@@ -86,5 +108,5 @@
     <view class="cu-load bg-white {{adminStatistics.length == 0 && !!isLoad?'over':''}}"></view>
     <view class="cu-load over bg-white" wx:if="{{adminStatistics==null && isLoad}}"></view>
   </view>
-  <view class="padding"></view>
+  <view class="padding-sm"></view>
 </scroll-view>
