--- a/miniprogram/pages/homePage/repairSheet/repairSheet.wxml
+++ b/miniprogram/pages/homePage/repairSheet/repairSheet.wxml
@@ -5,6 +5,31 @@
     <view class="cu-load load-icon {{!isLoad?'loading':'over'}}"></view>
   </view>
 </cu-custom>
+
+<!-- 注意事项 -->
+<view class="cu-modal {{modalName=='DialogModal'?'show':''}}">
+  <view class="cu-dialog">
+    <view class="cu-bar bg-white justify-end">
+      <view class="content">注意事项</view>
+    </view>
+    <view class="padding-xl" style="text-align: left;">
+      <text>1. 维修人员全部来自塔内计协技术部，我们本着“服务同窗，锻炼自我”的理念，<text style="color:red">自愿免费</text>为华师师生提供电脑维修服务。
+        2. 在提交报单后，请<text style="color:red">主动</text>联系维修人员
+        3. 我们的技术人员平时也需要上课，所以可能无法第一时间回复
+        4. 我们会尽力提供帮助，但无法保证一定能解决问题
+        5. 如果无法信任塔内，请退出
+        6. 对于态度恶劣的机主，我们<text style="color:red">有权拒绝</text>提供服务</text>
+    </view>
+    <view class="cu-bar bg-white justify-end">
+      <view class="action">
+        <button class="cu-btn line-green text-green" bindtap="backToHome">退出</button>
+        <button class="cu-btn margin-left {{sec==0?'bg-green':'bg-gray'}}"
+          bindtap="hideModal">同意{{sec==0?'':'('+sec+')'}}</button>
+      </view>
+    </view>
+  </view>
+</view>
+
 <form bindsubmit="submitSheet">
   <view class="cu-bar bg-white solid-bottom">
     <view class="action">
@@ -127,6 +152,8 @@
     </view>
   </view>
 </view>
+
+<!-- 提交成功信息 -->
 <view class="cu-modal {{modalName=='wechat'?'show':''}}">
   <view class="cu-dialog">
     <view class="padding-xxl flex" bindtap="copyData" data-data="{{wechat}}">
