--- a/miniprogram/pages/homePage/repairSheet/repairSheet.wxml
+++ b/miniprogram/pages/homePage/repairSheet/repairSheet.wxml
@@ -7,7 +7,7 @@
 </cu-custom>
 
 <!-- 注意事项 -->
-<view class="cu-modal {{modalName=='DialogModal'?'show':''}}">
+<!-- <view class="cu-modal {{modalName=='DialogModal'?'show':''}}">
   <view class="cu-dialog">
     <view class="cu-bar bg-white justify-end">
       <view class="content">注意事项</view>
@@ -28,7 +28,7 @@
       </view>
     </view>
   </view>
-</view>
+</view> -->
 
 <form bindsubmit="submitSheet">
   <view class="cu-bar bg-white solid-bottom">
