--- a/miniprogram/pages/aboutPage/about/about.wxml
+++ b/miniprogram/pages/aboutPage/about/about.wxml
@@ -24,10 +24,10 @@
       </text>
     </view>
     <view class="text-center">
-      <text class="text-grey text-lg">Version 1.9.1</text>
+      <text class="text-grey text-lg">Version 1.10.0</text>
     </view>
-    <view class="text-center">
-      <text class="text-grey text-sm">Author @小鸡</text>
+    <view class="text-center text-grey" bindtap="copyData">Author
+      <text class="text-purple"> @小鸡</text>
     </view>
   </view>
 </scroll-view>
