--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -107,7 +107,7 @@
           <text class="cuIcon-servicefill text-green"></text>
           <text class="text-grey">咨询客服</text>
         </button>
-        <view class="action">
+        <view>
           <text class="text-grey text-sm">可以催单哦</text>
         </view>
       </view>
@@ -116,26 +116,20 @@
           <text class="cuIcon-writefill text-yellow"></text>
           <text class="text-grey">意见反馈</text>
         </button>
-        <view class="action">
-          <view class="content"></view>
-        </view>
       </view>
       <view class="cu-item arrow" hover-class="none">
         <button class="cu-btn content" bindtap="toDiscover">
           <text class="cuIcon-discoverfill text-orange"></text>
           <text class="text-grey">实验室</text>
         </button>
-        <view class="action">
-          <view class="content">
-            <text class="text-grey text-sm"></text>
-          </view>
-        </view>
       </view>
       <view class="cu-item arrow">
-        <navigator class="content" url="/pages/aboutPage/about/about" hover-class="none">
-          <image src="cloud://demo-vr23l.6465-demo-vr23l-1259081600/image/logo.png" class="png" mode="aspectFit"></image>
-          <text class="text-grey">关于</text>
-        </navigator>
+        <button class="cu-btn content text-left">
+          <navigator class="content" url="/pages/aboutPage/about/about" hover-class="none">
+            <image src="cloud://demo-vr23l.6465-demo-vr23l-1259081600/image/logo.png" class="png" mode="aspectFit"></image>
+            <text class="text-grey">关于</text>
+          </navigator>
+        </button>
       </view>
 
     </view>
